--- a/VRChat/85/966985.html
+++ b/VRChat/85/966985.html
@@ -74,9 +74,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "QOH7SoE2gjiLi44eFjvqHnLXqTfGxHg2ACKdOMRJakg="></script>
+    "c2HLTmMmtOU/rOk2Bhp6cMWXD/eSC/v5J5L0vsLyZ6s="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ゴマサバ","description":"●説明\nサバです。ゴマサバです。\n泳ぎます。\nポリゴン数 △1,273\n設定済みUnityPackage含む。\n\nVRChat用アバターまたは素材としての利用を目的にしております。\n\n●内容\nUnityPackage（generic設定済みsceneファイル入り）\nモデルデータ.fbx\n【ゆっくり泳ぐ・早く泳ぐ・サババイブレーション】の3種のアニメーションが付属します。\nテクスチャ\n\n●利用条件\n改変利用、商用利用も問題ありません。\nもちろんカメラに映りこんでも何の問題もありません。\n再配布、販売は禁止します。\n\n●その他\nみんな魚介アバターを導入しよう！\n","url":"https://booth.pm/ja/items/966985","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/40fa2a37-6d16-483f-886c-02cc32f1f440/i/966985/65b20c31-ada5-4fa0-acb2-cc00b5a84857_base_resized.jpg"}
     </script>
@@ -90,7 +90,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="QOH7SoE2gjiLi44eFjvqHnLXqTfGxHg2ACKdOMRJakg="></script>
+    nonce="c2HLTmMmtOU/rOk2Bhp6cMWXD/eSC/v5J5L0vsLyZ6s="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -114,6 +114,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,10 +160,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/966985/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              408
+                              409
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/966985/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              408
+                              409
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
