--- a/VRChat/06/966006.html
+++ b/VRChat/06/966006.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "jpoCzMyq7tfBgN3Bbz4CIgPzHea83PPvUR+dfPYBmoQ="></script>
+    "Xj9RJDWAomig6+cCE/bxvk2E+lXx64Z3Z4CEJfLQYdY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"カウンターチェア △1245 fbx うにぱけ","description":"「あー、その椅子は使えるんだけど」\n「借金のカタに置いてかれてそのままなんだよね…」\n「重いし場所とるから持ってってくんない？」\n　\n　メーカー不明、デザイナーズ風の回転椅子\n　持ち歩けないし置いておくにも微妙にポリゴン数が多い\n　改変、再配布等は有償無償を問わず自由だそうだ\n　重いってそういう意味だったんだね…","url":"https://booth.pm/ja/items/966006","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/b76a1910-879f-4c22-9091-2a1f79ac5ce9/i/966006/3e3a4f5a-087d-4d81-bcee-dc6f9dfd1b2d_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="jpoCzMyq7tfBgN3Bbz4CIgPzHea83PPvUR+dfPYBmoQ="></script>
+    nonce="Xj9RJDWAomig6+cCE/bxvk2E+lXx64Z3Z4CEJfLQYdY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,7 +164,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/966006/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               218
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/966006/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               218
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
