--- a/VRChat/57/965757.html
+++ b/VRChat/57/965757.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "n4HPFKfhp0kZntBtgYgIkyK7GUgXdoYFDtnKLbgB8wA="></script>
+    "OHr8zMTJVaEnp+O29wJHli+pCJSHxJT8LWpSsGpVbTM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"猫帽子","description":"まばたきアニメーションが付いている\n\n3Dモデル『猫帽子』\n\n製作・配布：　NEG-13　(@NEG__13)\n\n\n◆内容物\n　本体　…　FBXファイル。テクスチャ\n\n\n\n【利用について】\n当モデルの使用で起こる問題は自己責任でお願い致します。ご了承ください。\n\n◆改変について\n　自由です。\n◆二次配布\n　禁止です。\n◆商用利用\n　OKです。\n◆VRChat意外での使用\n　OKです。\n◆性的コンテンツでの使用\n　OKです。","url":"https://booth.pm/ja/items/965757","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/4624dd9e-01a3-4b61-be33-4d2e9ede3984/i/965757/eec30ec0-f533-4c5e-a3ec-d9f805d5b195_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="n4HPFKfhp0kZntBtgYgIkyK7GUgXdoYFDtnKLbgB8wA="></script>
+    nonce="OHr8zMTJVaEnp+O29wJHli+pCJSHxJT8LWpSsGpVbTM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -156,7 +158,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/965757/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               53
@@ -171,14 +173,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/965757/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               53
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
