--- a/VRChat/94/965694.html
+++ b/VRChat/94/965694.html
@@ -99,9 +99,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "5rMkaZVQmlhLlfvcUJKf993aLPzVDYb/R7tnOJSz2A0="></script>
+    "GugCOULwJOxbhDeZ+vgbaJ5yJWPas4IUtXsX6CdOT1g="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ベーシックわん子","description":"可愛いケモっ子男の娘！\n君もわん子になってみんなをぺろぺろしよう！\n\n※肩のボーンが特殊なので、Unityで読み込みしたら必ずwanko_basic（シーン）をWクリックしてね！","url":"https://booth.pm/ja/items/965694","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/d6a0764b-a914-4967-8f0d-496582bb28c4/i/965694/f70d9bd5-65cc-46c3-ba02-8e87ee05afbf_base_resized.jpg"}
     </script>
@@ -112,7 +112,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="5rMkaZVQmlhLlfvcUJKf993aLPzVDYb/R7tnOJSz2A0="></script>
+    nonce="GugCOULwJOxbhDeZ+vgbaJ5yJWPas4IUtXsX6CdOT1g="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -136,6 +136,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -179,7 +181,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/965694/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               135
@@ -194,14 +196,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/965694/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               135
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
