--- a/VRChat/74/965674.html
+++ b/VRChat/74/965674.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "qFN5/0+PVXv4sNVcJUSmM4Uhyk0BAtvJcWKwi9kDZhE="></script>
+    "Bjs7KRJZLIR5/mp6qfM/kFFTZiOn0EG/4UBkBHI6Kls="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"3Dアバターモデル『猫魔女 アカゲ』【バーチャルマーケット】","description":"VRChat等で使える3Dモデルです。\n\n3Dアバターモデル『猫魔女　アカゲ』\n\n製作・配布：　NEG-13　(@NEG__13)\n\n\n◆内容物\n　本体　…　FBXファイル。テクスチャ\n　付属品…　猫帽子、パイプ、毒リンゴの杖\n　Unitypackage　…Unityへそのままインポートしてください\n\n\n\n【使用の際の注意】\n　Unityへインポートする際は事前にVRCSDKを適応しておいてください。\n\n【利用について】\n当モデルの使用で起こる問題は自己責任でお願い致します。ご了承ください。\n\n◆改変について\n　自由です。ただし、改変モデル使用の際はゾーニングにご配慮ください。\n◆パーツ流用について\n　OKです。\n　ただし、パーツを流用したモデルの再配布は禁止とさせていただきます。\n◆二次配布\n　禁止します。\n◆商用利用\n　OKです。\n◆VRChat意外での使用\n　OKです。\n◆性的コンテンツでの使用\n　OKです。","url":"https://booth.pm/ja/items/965674","offers":{"priceCurrency":"JPY","@type":"Offer","price":"2800"},"image":"https://booth.pximg.net/c/620x620/4624dd9e-01a3-4b61-be33-4d2e9ede3984/i/965674/959d2956-36e0-4abc-8138-b7152b182be2_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="qFN5/0+PVXv4sNVcJUSmM4Uhyk0BAtvJcWKwi9kDZhE="></script>
+    nonce="Bjs7KRJZLIR5/mp6qfM/kFFTZiOn0EG/4UBkBHI6Kls="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/965674/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               124
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/965674/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               124
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
