--- a/VRChat/98/964498.html
+++ b/VRChat/98/964498.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "IUl7OKeF5HR3vpxAcPpzLsvON+JCwBIRJwoWB1U3FCY="></script>
+    "gyM0sQ+iJwPUuMe0SI4qm/mHOKYmWIPUmjkMQyILmwg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat向け Genericアバター/3Dモデル 【空き缶】","description":"ポリゴン数　4704\n3Dモデルデータ（fbx/mqo)\nテクスチャデータ三種+カスタム用PSDファイル\nUnityPackage\n規約等書かれたReadmeファイル","url":"https://booth.pm/ja/items/964498","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/df1b1664-e034-4e96-b2b5-2efafdc8757c/i/964498/1b28dd51-db19-4e5b-9527-c0861b28e91d_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="IUl7OKeF5HR3vpxAcPpzLsvON+JCwBIRJwoWB1U3FCY="></script>
+    nonce="gyM0sQ+iJwPUuMe0SI4qm/mHOKYmWIPUmjkMQyILmwg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/964498/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               85
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/964498/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               85
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
